# c-test-repo

./: CMakeLists.txt  Dockerfile  README.md
cli/: CMakeLists.txt  cli.c  cli.h
cmake/: CTestConfig.cmake  Config.cmake.in  MultiCPackConfig.cmake  README.txt  Welcome.txt  config.h.in
lib/: CMakeLists.txt  library.c  library.h
list/: CMakeLists.txt  list.c  list.h
tests/: CMakeLists.txt  test.c  test_lib.h  test_string.h
